--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "name": "airbnb-clone-v1-server",
   "version": "0.1.0",
   "scripts": {
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "build": "tsc -p ./"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -10,6 +11,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.10",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "eslint": "^7.32.0",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
