--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,11 @@
     "build": "tsc -p ./"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.10",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
